--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "enum": "^2.5.0",
     "express": "~4.15.5",
     "get-twitter-bearer-token": "^1.0.0",
     "jade": "~1.11.0",
