--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
+    "dateformat": "^3.0.2",
     "debug": "~2.6.9",
     "enum": "^2.5.0",
     "express": "~4.15.5",
