--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.9.0",
     "request": "^2.83.0",
     "serve-favicon": "~2.4.5",
+    "set": "^1.1.1",
     "sleep": "^5.1.1",
     "timediff": "^1.1.1",
     "twitter": "^1.7.1"
